tests/custom_discriminant/fail/missing_default.stderr
error[E0277]: the trait bound `T: Default` is not satisfied
 --> tests/custom_discriminant/fail/missing_default.rs:3:1
  |
3 | #[custom_discriminant(i64)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `T`
  |
  = note: this error originates in the attribute macro `custom_discriminant` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
  |
4 | enum Foo<T: std::default::Default> {
  |           +++++++++++++++++++++++
